# sxgpt_base

./: .dockerigonre  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  setup.sh
app/streamlit/: config.jsonc  main.py
app/streamlit/.streamlit/: config.toml
app/streamlit/plugins/: __init__.py  pictures.py  simplechat.py
app/streamlit/static/css/: common.css
app/streamlit/utils/: common.py  display.py  logger.py  sessions.py
config/gcp/: cloudbuild_cache.yaml  cloudbuild_full.yaml
sx_agents/agents/: __init__.py
sx_agents/clients/: __init__.py
sx_agents/tools/: __init__.py
sx_agents/utils/: __init__.py  common.py  handler.py  memory.py  model.py
