[tool.poetry]
name = "sx_agents"
version = "0.1.0"
description = ""
authors = ["Takatoshi Ichikawa <tichikawa@sigmaxyz.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-openai = "^0.2.0"
streamlit = "^1.38.0"
google-cloud-logging = "^3.11.2"
pypdf = "^5.0.0"
unstructured = {extras = ["docx", "pptx", "xlsx"], version = "^0.15.13"}
langgraph = "^0.3.31"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
streamlit-code-editor = "^0.1.22"
langgraph-checkpoint = "^2.0.24"
langchain-experimental = "^0.3.4"
pygraphviz = "^1.14"


[tool.poetry.group.dev.dependencies]
ipython = "^8.27.0"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
